FE - Added mobile styles for MainPage, fixed Calendar visual issues on mobile version

--- a/SkillDrive/FrontEnd/src/components/Calendar/Calendar.scss
+++ b/SkillDrive/FrontEnd/src/components/Calendar/Calendar.scss
@@ -20,7 +20,9 @@
     background: #FFFFFF;
     box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.15);
     border-radius: 8px;
-
+    position: absolute;
+    left: 260px;
+    top: 100%;
   }
 
   &fade {
@@ -141,5 +143,13 @@
 
   &:last-child {
     margin-bottom: 0;
+  }
+}
+
+@media screen and (max-width: $breakpoint-mobile) {
+  .calendar__ {
+    &block {
+      left: -15px;
+    }
   }
 }
