--- a/SkillDrive/FrontEnd/src/components/MainPage/MainPage.scss
+++ b/SkillDrive/FrontEnd/src/components/MainPage/MainPage.scss
@@ -36,6 +36,9 @@
     position: absolute;
     top: -94px;
     right: 0px;
+    width: 902px;
+    height: 823px;
+    background: url("./images/undraw_city_driver.svg") no-repeat 0% 0%;
     z-index: -1;
   }
 }
@@ -137,7 +140,142 @@
 }
 
 /* Main section. Head and description sections. Adaptive */
-@media screen and (max-width: $breakpoint-mobile) {}
+@media screen and (max-width: $breakpoint-mobile) {
+  .main__section {
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 35px;
+
+    &_header {
+      height: 100%;
+      margin-bottom: 2px;
+    }
+  }
+
+  .mobile_reverse {
+    flex-direction: column-reverse;
+  }
+
+  .main__section_column {
+    margin: 0 auto;
+
+    .section__image {
+      margin: 0 auto;
+      margin-bottom: 5px;
+    }
+  }
+
+  .section__image {
+    margin: 0;
+    padding: 0;
+    padding-left: 20px;
+
+    img {
+      width: 240px;
+      height: 164px;
+    }
+
+    &_header {
+      position: relative;
+      width: 100%;
+      height: 283px;
+      padding: 0;
+      top: -73px;
+      left: 0px;
+      background: url("./images/undraw_city_driver_small.svg") no-repeat 0% 0%;
+    }
+  }
+
+  .section__description {
+    max-width: 335px;
+
+    h2 {
+      max-width: 335px;
+      font-size: 24px;
+      font-weight: 500;
+      line-height: 29px;
+      margin-top: 0px;
+      margin-bottom: 12px;
+    }
+
+    p {
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 21px;
+      margin-top: 0px;
+      margin-bottom: 0px;
+    }
+
+    &:nth-child(even) {
+      padding-left: 22px;
+      margin-top: 22px;
+    }
+
+    &:nth-child(odd) {
+      padding-right: 0px;
+      padding-left: 22px;
+    }
+
+    &_header {
+      max-width: 309px;
+      left: 0px;
+      top: -74px;
+
+      h1 {
+        font-size: 32px;
+        font-weight: 500;
+        line-height: 38px;
+        margin-bottom: 17px;
+        max-width: 309px;
+      }
+
+      p {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        margin-bottom: 38px;
+        max-width: 335px;
+      }
+    }
+  }
+
+  .section__description_wide {
+    align-self: center;
+
+    &>h2 {
+      max-width: 300px;
+    }
+
+    h2 {
+      font-size: 24px;
+      font-weight: 500;
+      line-height: 29px;
+      margin-top: 0px;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+  }
+
+  .footer_h2 {
+    padding: 0;
+    margin-bottom: 43px !important;
+  }
+
+  .button_link
+   {
+    align-self: center;
+    a {
+      padding: 15px 89px;
+    }
+   }
+
+   .button_footer {
+    margin-bottom: 30px;
+    height: 46px;
+   }
+}
 
 
 /* Main page section. Steps section. */
@@ -250,5 +388,123 @@
   }
 }
 
+.mobile {
+  display: none;
+}
+
 /* Main section. Steps section. Adaptive */
-@media screen and (max-width: $breakpoint-mobile) {}
+@media screen and (max-width: $breakpoint-mobile) {
+  .main__section_how-to {
+    padding: 40px 20px;
+    margin-bottom: 43px;
+  }
+
+  .main__section_rules {
+    margin-bottom: 40px;
+    padding-left: 22px;
+  }
+
+  .main__section_feedbacks {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    margin-bottom: 48px;
+
+    h2 {
+      text-align: left;
+    }
+  }
+
+  .main__section.main__section_steps {
+    flex-direction: column;
+    align-items: flex-start;
+
+    .mb_20 {
+      margin-bottom: 10px;
+    }
+
+    .mb_80 {
+      margin-bottom: 30px;
+    }
+
+    h2 {
+      font-size: 24px;
+      line-height: 28px;
+      margin-top: 0px;
+      margin-bottom: 30px;
+    }
+
+    p {
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 21px;
+      padding: 0px;
+      margin: 0px;
+      text-align: left;
+      width: auto;
+    }
+  }
+
+  .section__steps {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  .step {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    min-height: 22px;
+    width: 100%;
+
+    &__index {
+      width: 32px;
+      height: 32px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      font-size: 16px;
+      font-weight: 500;
+      margin-bottom: 0px;
+
+      img {
+        width: 16px;
+        height: 16px;
+      }
+    }
+
+    &__title {
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 21px;
+      margin-left: 14px;
+
+      p {
+        width: 300px;
+        padding: 0;
+        margin: 0;
+      }
+    }
+
+    &_dashes {
+      display: none;
+      position: relative;
+      width: 1px;
+      height: 20px;
+      top: 2px;
+      left: 16px;
+      padding: 2px 0px;
+    }
+
+    &_short {
+      max-width: 139px;
+    }
+  }
+
+  .mobile {
+    display: initial;
+  }
+}
